# xcb-util-xim

./: Makefile.am  configure.ac
xim/: Makefile.am  xcb-xim.pc.in  xcb_xim.h  xim.c
